<resources>
    <string name="app_name">EcoChelyabinsk</string>
    <string name="batteries">Батарейки</string>
    <string name="plastic">Пластик</string>
    <string name="wastepaper">Макулатура</string>
    <string name="list1">Офисную бумагу с печатью и без\nКниги\nГазеты\nЖурналы, каталоги\nКалендари\nТетради, записные книжки\nКартон без полиэтиленовой пленки на поверхности\nКартонные коробки и упаковку\nРекламные проспекты, брошюры и листовки\nБумажную обрезь</string>
    <string name="list2">Подложки для яиц\nЧеки из магазинов\nВтулки из-под туалетной бумаги\nТуалетную бумагу\nИспользованные салфетки, бумажные полотенца\nОдноразовую бумажную посуду\nПачки от сигарет\nИспользованные обои\nФотографии\nГрязную или промасленную бумагу</string>
    <string name="mnzn_description"><b>Класс опасности:</b> 2\n<b>Состав:</b> Оксид марганца (MnO<sub>2</sub>), железо (Fe), цинк (Zn), гидроксид калия (KOH), углерод (С), латунь и тд.\nСамые массово используемые элементы питания маркируются словом &#171;alkaline&#187;, что в переводе с английского языка означает щелочь, поэтому часто их называют алкалиновыми и щелочными.</string>
    <string name="nimh_description"><b>Класс опасности:</b> 2\n<b>Состав:</b> Никель (Ni), железо (Fe), гидроксид калия (KOH), марганец (Mn), цинк (Zn), лантаноиды, пластик и тд.\nИспользуются в быту как альтернатива марганцево-цинковых батареек. Никель - наиболее опасный металл для окружающей среды.</string>
    <string name="li_ion_description"><b>Класс опасности:</b> 2\n<b>Состав:</b> Алюминий (Al), углерод (С), медь (Cu), электролит LiPF<sub>6</sub>, оксид лития-кобальта (LiCoO<sub>2</sub>), поливинилиденфторид (ПВДФ), диэтилкарбонат, этиленкарбонат, этиловый метиловый карбонат, графитовый порошок и тд.\nИспользуются в телефонах, камерах, ноутбуках и т.п.</string>
    <string name="agzn_description"><b>Класс опасности:</b> 2\n<b>Состав:</b> Железо (Fe), оксид серебра (Ag<sub>2</sub>O), цинк (Zn), медь (Cu), никель (Ni), углерод (С), ртуть (Hg), гидроксид калия (KOH), оксид марганца (MnO<sub>2</sub>), пластик и тд.\nИспользуются в часах и других миниатюрных электронных устройствах, а также в военной технике, ракетостроении и авиации.</string>
    <string name="nicd_description"><b>Класс опасности:</b> 1\n<b>Состав:</b> Железо (Fe), никель (Ni), кадмий (Cd), гидроксид калия (KOH), пластик и тд.\nПрименяются для автономного питания некоторых моделей шуруповертов и дрелей, а также в электрокарах, самолетах и троллейбусах.</string>
    <string name="li_socl2_description"><b>Класс опасности:</b> 2\nПрименяются для промышленной электроники в автономных устройствах, работающих в труднодоступных местах при жестких климатических условиях.</string>
    <string name="phone">Телефон</string>
    <string name="address">Адрес</string>
    <string name="title">Название компании</string>
    <string name="nothing">В этом районе пока ничего нет...</string>
    <string-array name="districts">
        <item>Центральный</item>
        <item>Тополиная аллея</item>
        <item>Северо-запад</item>
        <item>Советский</item>
        <item>ЧТЗ</item>
        <item>ЧМЗ</item>
        <item>Ленинский</item>
        <item>Курчатовский</item>
    </string-array>
</resources>